FullQa New/src/PS Enterprise/objects/Project_Gantt_Preferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These preferences control individual customizations to the appearance of Project Task Gantt and its interactions with users.</description>
    <fields>
        <fullName>Alert_Task_Dates_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, an alert graphic and tooltip message displays when Task dates are out of the Milestone target date range.</description>
        <inlineHelpText>If selected, an alert graphic and tooltip message displays when Task dates are out of the Milestone target date range.</inlineHelpText>
        <label>Alerts - Task dates - Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Task_Dates_PTA_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, an alert graphic and tooltip message displays when Task dates are out of the Project Task Assignment dates range.</description>
        <inlineHelpText>If selected, an alert graphic and tooltip message displays when Task dates are out of the Project Task Assignment dates range.</inlineHelpText>
        <label>Alerts - Task dates - PTA dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Task_Dates_Project__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, an alert graphic and tooltip displays when Task dates are out of the Project start date and end date ranges.</description>
        <inlineHelpText>If selected, an alert graphic and tooltip displays when Task dates are out of the Project start date and end date ranges.</inlineHelpText>
        <label>Alerts - Task dates - Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Task_Hours_PTA_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, an alert graphic and tooltip message displays when task hours are out the range of Project Task assignment hours.</description>
        <inlineHelpText>If selected, an alert graphic and tooltip message displays when task hours are out the range of Project Task assignment hours.</inlineHelpText>
        <label>Alerts - Task hours - PTA hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Day_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to enable or disable Day Detail Zoom level.</description>
        <inlineHelpText>When true, Project Task Gantt offers a Day Detail zoom level, showing the hours scheduled in an expanded day display. The default is false.</inlineHelpText>
        <label>Enable Day Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Save_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether a dialog box is displayed every time you click Save. This allows you to review the proposed changes to project tasks before committing them to the actual records in your organization. The setting is deselected by default.</inlineHelpText>
        <label>Hide Preview and Confirmation on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Demand_Default__c</fullName>
        <defaultValue>&quot;resource requests&quot;</defaultValue>
        <inlineHelpText>Specifies the default resource demand type when clicking the Create Resource Demand button in Project Task Gantt.  Values are: &quot;resource requests&quot;, &quot;held resource requests&quot;, or &quot;assignments&quot;. The default value is &quot;resource requests&quot;.</inlineHelpText>
        <label>Resource Demand Default</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Task_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Show Task Notes in Gantt</inlineHelpText>
        <label>Show Task Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Click_Task_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a user to change the default behavior of Gantt from double-click to single-click in the task pane.</description>
        <inlineHelpText>Allows you to change default Project Task Gantt task pane selection behavior from double-click to single-click. The setting is deselected by default.</inlineHelpText>
        <label>Single Click Task Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Auto_Link_PTA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a user to change the default behavior of Gantt so that new project task assignments will not be linked to existing assignment or resource request.</description>
        <inlineHelpText>When selected, allows you to change the default behavior of Project Task Gantt so that new project task assignments are not linked to existing assignment or resource request. This setting is deselected by default.</inlineHelpText>
        <label>Suppress Auto Link Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zoom_Level__c</fullName>
        <defaultValue>&quot;week&quot;</defaultValue>
        <inlineHelpText>Specifies the default zoom level for the timeline. Valid values are: quarter, month, week, day or daydetail. This setting is set to week by default.</inlineHelpText>
        <label>Zoom Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Project Task Gantt Preferences</label>
</CustomObject>